# liuli-v2

./: .env.example  .gitignore  AGENTS.md  README.md  migrate_aliyun_pg_once.sh  pyproject.toml  start.bat  start.sh  start_ubuntu_pg.sh  stop.bat  stop.sh
docs/: liuli_android_app_spec.md  liuli_database_schema_spec_v5.html  liuli_database_schema_spec_v5.md  liuli_database_schema_spec_v7.html  liuli_database_schema_spec_v8.html  liuli_database_schema_spec_v8.md  liuli_mcp_design.md  liuli_new_branch_context.md  liuli_system_spec.md  liuli_system_spec_v20.html  liuli_system_spec_v20.md  liuli_system_spec_v23.html  liuli_system_spec_v23.md  liuli_system_spec_v24.html  liuli_system_spec_v24.md  liuli_system_spec_v25.html  liuli_system_spec_v25.md  liuli_system_spec_v26.md  liuli_system_spec_v6.html  liuli_system_spec_v6.md  liuli_tag_model_alignment.md  liuli_track_discovery_minimal_refactor.md  liuli_track_discovery_refactor.md  track_discovery_legacy_table_cleanup.sql  赛道动态.txt  赛道看板.txt  赛道看板重构.md
invest_assistant/: __init__.py  main.py  worker.py
invest_assistant/bootstrap/: __init__.py  app.py  config.py  database.py  logging.py  scheduler.py
invest_assistant/services/: ai_debug_logger.py
invest_assistant/shared/: __init__.py  db_types.py  enums.py  errors.py  pagination.py  response.py  time_utils.py
scripts/: sync-mobile-h5.mjs
tests/integration/: test_app_boot.py
tests/unit/: test_ai_debug_logger.py  test_ai_log_stats.py  test_alert_event_constraints.py  test_auth.py  test_basic_modules.py  test_console_data_sources_static.py  test_futu_news_job.py  (+50 more)
(+382 files in other folders)
